--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TELEGRAM_BOT_TOKEN=7565757922:AAHTCgAKxFYxl495Rr8l-ROr4W5BVdyiNkk
+TELEGRAM_OWNER_ID=7122508724
 WEBHOOK_URL=https://autorespondv2.onrender.com/webhook
 PORT=10000
